# CompSci30S

./: .gitignore  CMakeLists.txt
Assignment 1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt
Assignment 2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt  bartlett.h  player.h
Assignment 3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt  bartlett.h
Assignment 4/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt  bartlett.h
