cmake_minimum_required(VERSION 3.24)
project(CompSci30S)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23")

add_subdirectory("Assignment 1")
add_subdirectory("Assignment 2")
add_subdirectory("Assignment 3")
add_subdirectory("Assignment 4")


